<resources>
    <string name="app_name">TVClient</string>
    <string name="notif_desc">Notification description</string>
    <string name="action_search">Search</string>
    <string name="action_share">Share</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_permission">Get permission</string>
    <string name="work_manager_start">Start WorkManager</string>
    <string name="work_manager_cancel">Cancel WorkManager</string>
    <string name="layout_manager">androidx.recyclerview.widget.LinearLayoutManager</string>
    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>
    <string name="dialog_title">Title</string>
    <string name="dialog_text">Text</string>
    <string name="dialog_permission_title">Title permission</string>
    <string name="dialog_permission_text">We need this permission</string>

    <string name="max_items_category_key">max_items_category</string>
    <string name="max_items_category">Max items category</string>
    <string name="max_items_switch_key">max_items_switch</string>
    <string name="max_items_switch">Enable max items</string>
    <string name="max_items_key">max_items</string>
    <string name="max_items">Max items</string>
</resources>