<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_search"
        android:title="@string/action_search"
        android:icon="@drawable/ic_search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />

    <item android:id="@+id/action_share"
        android:title="@string/action_share"
        android:icon="@drawable/ic_share"
        app:showAsAction="ifRoom" />

<!--  use ShareActionProvider -->
<!--    <item android:id="@+id/action_share"-->
<!--        android:title="@string/action_share"-->
<!--        app:showAsAction="ifRoom"-->
<!--        app:actionProviderClass="androidx.appcompat.widget.ShareActionProvider" />-->

    <item
        android:id="@+id/work_manager"
        android:title="@string/work_manager_start"
        android:icon="@drawable/ic_work_manager"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_refresh"
        android:title="@string/menu_refresh"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_settings"
        android:title="@string/menu_settings"
        app:showAsAction="never" />

    <item android:id="@+id/menu_permission"
        android:title="@string/menu_permission"
        app:showAsAction="never" />
</menu>